modifiche per build TS

--- a/src/QuizH/Views/Question/Details.cshtml
+++ b/src/QuizH/Views/Question/Details.cshtml
@@ -5,7 +5,7 @@
     <h4>Risposte</h4>
     @foreach (var option in Model.Options)
     {
-            @if (option.IsCorrect)
+        if (option.IsCorrect)
         {
             <span class="glyphicon glyphicon-ok" ></span>
         }
