--- a/src/QuizH/Views/Exam/Details.cshtml
+++ b/src/QuizH/Views/Exam/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model QuizH.ViewModels.Exam.ExamDetailsViewModel
 <div class="row">
-    <div class="col-md-9"><h1>@Model.Title</h1></div>
+    <div class="col-md-9"><h1>@Html.Raw(Model.Title)</h1></div>
 </div>
 <div class="row">
     <div class="col-md-3"><h3>@Model.Course</h3></div>
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-12"><h2>Instructions</h2></div>
-    <div class="col-md-12">@Model.Instructions</div>
+    <div class="col-md-12">@Html.Raw(Model.Instructions)</div>
 </div>
 <div class="row">
     <div class="col-md-12"><h2>Questions</h2></div>
