Move EntityDbContext to DAL

--- a/src/QuizH/Views/Shared/_Layout.cshtml
+++ b/src/QuizH/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 asp-fallback-test="window.jQuery">
         </script>
     </environment>
-    @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
+    @*@Html.ApplicationInsightsJavaScript(TelemetryConfiguration)*@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
