--- a/src/QuizH/Views/Exam/Insert.cshtml
+++ b/src/QuizH/Views/Exam/Insert.cshtml
@@ -69,7 +69,7 @@
                         class="form-control"
                         data-bind="options: subjects,
                        optionsText: 'title',
-                       optionsValue: 'id',
+                       optionsValue: 'subjectId',
                        value: selectedSubject,
                        selectedOptions: [selectedSubject],
                        optionsCaption: 'Choose...'"></select>
@@ -80,7 +80,7 @@
                         class="form-control"
                         data-bind="options: courses,
                        optionsText: 'title',
-                       optionsValue: 'id',
+                       optionsValue: 'courseId',
                        value: selectedCourse,
                        selectedOptions: [selectedCourse],
                        optionsCaption: 'Choose...'"></select>
