--- a/src/QuizH/Views/Exam/Details.cshtml
+++ b/src/QuizH/Views/Exam/Details.cshtml
@@ -11,11 +11,13 @@
     <div class="col-md-12">@Html.Raw(Model.Instructions)</div>
 </div>
 <div class="row">
-    <div class="col-md-12"><h2>Questions</h2></div>
+    <h2>Questions</h2>
+    <ul>
     @foreach (var question in Model.Questions)
     {
-        <div class="col-md-12">@question.Text</div>
+        <li>@Html.Raw(question.Text)</li>
     }
+    </ul>
 </div>
 @using (Html.BeginForm("Download", "Exam", FormMethod.Post))
 {
